--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
               </div>
               <div class="card">
                 <div class="card-img-wrapper">
+                  <img src="imagens/proj2.jpg" alt="imagem do projeto Maratona" />
+                </div>
+                <div class="card-info">
+                  <h2>Maratona</h2>
+                  <h3>HTML, CSS</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img-wrapper">
                   <img src="imagens/proj3.jpg" alt="imagem do projeto Casa Bela" />
                 </div>
                 <div class="card-info">
