--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="banner">
                 <h1>Web Developer & Front End Designer</h1>
                 <p>Edimar Ladeia</p>
-                <button>Saiba mais</button>
+                <button onclick="window.location.href = 'http:cv.html'">Saiba Mais</button>
             </div>
 
         </header>
@@ -38,10 +38,10 @@
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+                    <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
                 </ul>
             </nav>
             <div class="social-media">
@@ -52,7 +52,7 @@
         </aside>
         <section class="sessao-conhecimentos">
             <div class="sessao-header">
-                <h1>Conhecimentos</h1>
+                <h1 id="conhecimento">Conhecimentos</h1>
             </div>
             <div class="conhecimentos">
                 <div class="conhecimento">
@@ -61,9 +61,9 @@
                         <h3>HTML</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus totam voluptate iure aut
+                        <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus totam voluptate iure aut
                             explicabo quibusdam, labore cum sunt sequi eum atque alias enim? Dolor quae recusandae ut
-                            aperiam fugiat deleniti?</p>
+                            aperiam fugiat deleniti  lo --></p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -72,9 +72,9 @@
                         <h3>CSS</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis laborum quam odit
+                        <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia blanditiis laborum quam odit
                             ex, voluptate quos amet laboriosam facere mollitia culpa saepe adipisci commodi? Neque
-                            repudiandae quaerat eius eaque. Facere!F</p>
+                            repudiandae quaerat eius eaque. Facere! --></p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -83,9 +83,9 @@
                         <h3>Design</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, earum? Dicta tempora
+                        <p><!-- Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, earum? Dicta tempora
                             voluptatem, odit consequatur recusandae aspernatur ratione animi, corporis sed aperiam
-                            nostrum et quia commodi iusto ullam consectetur illo!
+                            nostrum et quia commodi iusto ullam consectetur illo! -->
                         </p>
                     </div>
                 </div>
@@ -95,9 +95,9 @@
                         <h3>Javascript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque cumque officiis
+                        <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur neque cumque officiis
                             quisquam, dignissimos consequatur at unde dolore excepturi cupiditate alias doloremque
-                            adipisci dolorem vitae provident? Repellat itaque culpa corporis!</p>
+                            adipisci dolorem vitae provident? Repellat itaque culpa corporis! --></p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -106,9 +106,9 @@
                         <h3>Bootstrap</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, cupiditate temporibus
+                        <p><!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, cupiditate temporibus
                             incidunt corrupti culpa eligendi porro quas aliquam doloribus autem! Saepe voluptatibus
-                            doloremque sapiente explicabo minima officia? Repellat, ipsa magni.</p>
+                            doloremque sapiente explicabo minima officia? Repellat, ipsa magni. --></p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -117,9 +117,9 @@
                         <h3>Git e GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia atque blanditiis inventore
+                        <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia atque blanditiis inventore
                             excepturi molestias quisquam sequi cumque repudiandae eius? Commodi blanditiis suscipit
-                            minima laudantium esse vero laboriosam beatae doloribus earum!</p>
+                            minima laudantium esse vero laboriosam beatae doloribus earum! --></p>
                     </div>
                 </div>
                 <div class="conhecimentos-img-wrapper">
@@ -139,7 +139,7 @@
                 <div class="card-info">
                   <h2>List</h2>
                   <h3>Javascript</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
+                  <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic? --></p>
                   <button class="btn">Saiba Mais</button>
                 </div>
               </div>
@@ -150,7 +150,7 @@
                 <div class="card-info">
                   <h2>Maratona</h2>
                   <h3>HTML, CSS</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
+                  <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque. --></p>
                   <button class="btn">Saiba Mais</button>
                 </div>
               </div>
@@ -161,7 +161,7 @@
                 <div class="card-info">
                   <h2>Maratona</h2>
                   <h3>HTML, CSS</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
+                  <p><!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque. --></p>
                   <button class="btn">Saiba Mais</button>
                 </div>
               </div>
@@ -172,16 +172,85 @@
                 <div class="card-info">
                   <h2>Sites Prontos</h2>
                   <h3>HTML</h3>
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
+                  <p><!-- Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?< --></p>
                   <button class="btn">Saiba Mais</button>
                 </div>
               </div>
             </div>
   
           </section>
-    </div>
-    </div>
-
+      
+          <section class="sessao-contato" id="contato">
+            <div class="contato-wrapper">
+              <div class="contato-left"></div>
+              <div class="contato-right">
+                <h1>Contato</h1>
+                <form>
+                  <div class="input-group">
+                    <input type="text" class="field" id="nome">
+                    <label for="nome" class="field-label">Nome</label>
+                  </div>
+                  <div class="input-group">
+                    <input type="text" class="field" id="email">
+                    <label for="email" class="field-label">E-mail</label>
+                  </div>
+                  <div class="input-group">
+                    <textarea class="field" id="mensagem"></textarea>
+                    <label for="mensagem" class="field-label">Mensagem</label>
+                  </div>
+                  <button type="submit" class="btn btn-submit">Enviar</button>
+                </form>
+              </div>
+            </div>
+          </section>
+  
+          <section class="sessao-orcamento" id="orcamento">
+            <div class="orcamento-wrapper">
+              <h1>Faça um orçamento</h1>
+              <form>
+                <label for="qtde">Qtde de Páginas</label>
+                <input type="number" min="1" name="qtde" id="qtde">
+                <label for="js">Preciso de um script JS</label>
+                <input type="checkbox" name="js" id="js">
+                <label>Layout</label>
+                <div class="group-layout">
+                  <div>
+                    <input type="radio" name="layout" id="layout-sim">
+                    <label for="layout-sim">Preciso de um layout</label>
+                  </div>
+                  <div>
+                    <input type="radio" name="layout" id="layout-nao">
+                    <label for="layout-nao">Já tenho um layout</label>
+                  </div>
+                </div>
+                <label for="prazo">Prazo</label>
+                <input type="range" name="prazo" id="prazo" min="1" max="10">
+                <label id="preco">R$ 0,00</label>
+                <button class="btn btn-orcamento" type="submit">Enviar</button>
+              </form>
+            </div>
+          </section>
+  
+          <footer>
+            <div class="footer-content">
+              <p>
+                Copyright &copy; 2021 - EdyLadeia - Todos os diretos reservados
+              </p>
+              <div class="social-list">
+                <ul>
+                  <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                </ul>
+              </div>
+            </div>
+          </footer>
+          <!-- <a href="#home" id="link-topo">
+            <i class="fas fa-arrow-up"></i>
+          </a> -->
+      </div>
+     </body> 
+     <script src="script.js"></script>
 
 </body>
 
