--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="banner">
                 <h1>Web Developer & Front End Designer</h1>
                 <p>Edimar Ladeia</p>
-                <button onclick="window.location.href = 'http:cv.html'">Saiba Mais</button>
+                <button onclick="window.location.href = 'https://ladeia2.github.io/cv-online/'">Saiba Mais</button>
             </div>
 
         </header>
